--- a/src/public/html/index.html
+++ b/src/public/html/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="javascripts/main.js"></script>
-
     <title>WebSocket</title>
 </head>
 <body>
-    <div class="websocket">웹소켓 입니다.</div>
+    <div class="websocket">Websocket</div>
 </body>
 </html>
 
